# libcolor

./: README.md  pyproject.toml
.zed/: tasks.json
src/libcolor/colorspace/: srgb.py
tests/colorspace/: test_srgb.py
