[project]
name = "libcolor"
version = "0.1.0"
description = "Library functions to deal with different colorspaces and respective conversions, as well as a few utilities."
readme = "README.md"
authors = [
    { name = "siru", email = "email@siru.ink" }
]
requires-python = ">=3.14"
dependencies = []
license = "GPL-3.0-only"
keywords = ["color", "colorspace", "luminance", "contrast"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "Natural Language :: English", "Programming Language :: Python :: 3.14", "Typing :: Typed", "Topic :: Utilities"]

[project.urls]
Homepage = "https://www.libcolor.siru.ink/"
# Documentation = "https://www.libcolor.siru.ink/"
Repository = "https://git.siru.ink/siru/libcolor"
# Issues = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
